[package]
name = "oxidator"
version = "0.1.0"
authors = ["github.com/Aki0x137"]
edition = "2021"

description = "A reusable LMAX Disruptor Implementation in Rust"
license-file = "LICENSE"
repository = "https://github.com/observe-io/oxidator"
readme = "README.md"
categories = ["concurrency", "data-structures"]
keywords = ["rust", "disruptor", "high-performance"]


[dependencies]
crossbeam-channel = "0.5.15"


[[example]]
name = "multi_producer"
path = "samples/multi_producer_sample.rs"

[[example]]
name = "single_producer"
path = "samples/single_producer_sample.rs"


[[bin]]
name = "channel_bench"
path = "benchmarks/channel_bench.rs"

[[bin]]
name = "crossbeam_bench"
path = "benchmarks/crossbeam_bench.rs"
